# cascade-playground

./: .gitignore  LICENSE  README.md
affinity_sets_generic/: CMakeLists.txt  README.md  category_udl.cpp  cloudlab-client-all.sh  cloudlab-client.sh  cloudlab-server.sh  common.hpp  entry_udl.cpp  extract_metrics.py  partial_latency.py  pipeline_client.cpp  return_udl.cpp  run_client.sh  run_servers.sh
affinity_sets_generic/cfg/: derecho.cfg.local  derecho.cfg.rdma  dfgs.json.tmp  layout.json  layout.json.tmp  setup_config.sh  udl_dlls.cfg.tmp
affinity_sets_generic/scripts/: common.py  plot_rates.py
cache_test/: CMakeLists.txt  README.md  cache_client.cpp  cache_udl.cpp  common.hpp  stop_servers.sh
cache_test/cfg/: derecho.cfg.rdma  dfgs.json.tmp  layout.json.tmp  udl_dlls.cfg.tmp
cbdc/: CMakeLists.txt  README.md  benchmark_workload.cpp  benchmark_workload.hpp  common.hpp  generate_workload.cpp
multiple_object/: CMakeLists.txt  README.md  multiobj_test.cpp  setup_config.sh
multiple_object/cfg/: derecho.cfg
multishard_tx/: CMakeLists.txt  README.md  setup_config.sh  tx_test.cpp
multishard_tx/cfg/: derecho.cfg.rdma  layout.json.tmp
new_blob_generator/: CMakeLists.txt  client.py  dest_udl.cpp  pyudls.py  source_udl.cpp
new_blob_generator/cfg/: dfgs.json.tmp  layout.json.tmp  udl_dlls.cfg.tmp
new_blob_generator/cfg/n0/: derecho.cfg
new_blob_generator/cfg/n1/: derecho.cfg
new_blob_generator/cfg/n2/: derecho.cfg
objpool_bug/: create_cmdline.sh  create_script.py  derecho.cfg  put_cmdline.sh  put_script.py  setup_config.sh
p2p_send_debug/: CMakeLists.txt  README.md  cloudlab-experiment.sh  cloudlab-server.sh  cloudlab-setup.sh  common.hpp  debug_experiment.cpp  debug_setup.cpp  debug_udl.cpp  extract_latencies.py  tag_latency.py
p2p_send_debug/cfg/: derecho.cfg.rdma  dfgs.json.tmp  layout.json.tmp  setup_config.sh  udl_dlls.cfg.tmp
shortcut_test/: CMakeLists.txt  README.md  common.hpp  run_servers.sh  setup_config.sh  shortcut_client.cpp  shortcut_udl.cpp
shortcut_test/cfg/: derecho.cfg.rdma  dfgs.json.tmp  udl_dlls.cfg.tmp
timestamping_test/: derecho.cfg  dump_test.sh  layout.json
udl_get_debug/: CMakeLists.txt  README.md  common.hpp  debug_udl.cpp  dump_timestamps.sh  get_latencies.py  run_client.sh  run_server.sh  setup_config.sh  stop_server.sh  udl_get.cpp
udl_get_debug/cfg/: derecho.cfg.rdma  dfgs.json.tmp  layout.json.tmp
udl_microbenchmark/: CMakeLists.txt  README.md  common.hpp  dump_timestamps.sh  get_latencies.py  local_get.py  requester_udl.cpp  run_client.sh  run_server.sh  setup_config.sh  udl_microbenchmark.cpp
udl_microbenchmark/cfg/: derecho.cfg.rdma  dfgs.json.tmp  layout.json.tmp  udl_dlls.cfg.tmp
udl_microbenchmark/plot/: common.py  plot_rates.py  plot_sizes.py
